# bwtools

./: .gitignore  AGENTS.md  Cargo.toml  IDEAS.md  README.md  flake.nix  player_list.json
.github/workflows/: build.yml
docs/: replay_downloader.md
scripts/: build-all.sh
src/: api.rs  app.rs  cache.rs  config.rs  detect.rs  error.rs  gateway.rs  history.rs  input.rs  interaction.rs  main.rs  overlay.rs  player_list.rs  players.rs  profile.rs  profile_history.rs  race.rs  replay.rs  replay_download.rs  replay_io.rs  runtime.rs  search.rs  tui.rs  ui.rs
src/app/: mod.rs  navigation.rs  players.rs  replay.rs  search.rs  state.rs
src/ui/: debug_view.rs  display.rs  footer.rs  main_view.rs  mod.rs  players_view.rs  profile_stats.rs  replays_view.rs  search_view.rs  status.rs
