[package]
name = "bwtools"
version = "0.1.10"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bw-web-api-rs = "0.2.5"
chrome-cache-parser = "0.2.3"
chrono = "0.4.42"
crossterm = "0.29.0"
ratatui = "0.29.0"
url = "2.5.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
which = "6.0.3"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
