[package]
name = "bwtools"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
crossterm = "0.29.0"
ratatui = "0.29.0"
url = "2.5.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
which = "6.0.3"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
bw-web-api-rs = "0.2.6"
thiserror = "1.0.69"
chrome-cache-parser = "0.2.4"
